# fractals_generator_app

./: .gitignore  CMakeLists.txt  main.cpp
src/app/: app.cpp  app.hpp  canvas_model.cpp  canvas_model.hpp  fractal_generator.cpp  fractal_generator.hpp  fractal_pattern_generator.cpp  fractal_pattern_generator.hpp  fractals_renderer_view_model.cpp  fractals_renderer_view_model.hpp  init_app.cpp  init_app.hpp  line.cpp  line.hpp  pattern_generator_view_model.cpp  pattern_generator_view_model.hpp  view_models_factory.cpp  view_models_factory.hpp
src/qml/: LinesRenderSurface.qml  main.qml  qml.qrc
